@@ -8,45 +8,67 @@ import com.project.JewelryMS.repository.PromotionRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-import java.util.Optional;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.format.TextStyle;
+import java.time.temporal.ChronoUnit;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 @Service
 public class PromotionService {
     @Autowired
     PromotionRepository promotionRepository;
-    public List<PromotionResponse> ReadAllPromotionwithProductID(){
-        List<Promotion> promotionList = promotionRepository.findAllPromotion();
-        List<PromotionResponse> responses = new ArrayList<>();
-        for(Promotion p : promotionList){
-            PromotionResponse promotionResponse = new PromotionResponse();
-            promotionResponse.setPromotionID(p.getPK_promotionID());
-            promotionResponse.setCode(p.getCode());
-            promotionResponse.setDescription(p.getDescription());
-            promotionResponse.setStartDate(p.getStartDate());
-            promotionResponse.setEndDate(p.getEndDate());
-            promotionResponse.setStatus(p.isStatus());
-            List<Long> listPromotion = promotionRepository.findProductSellIdsByPromotionId(p.getPK_promotionID());
-            List<String> promotionIds = new ArrayList<>();
-            for (Long promotionId : listPromotion) {
-                promotionIds.add(String.valueOf(promotionId));
-            }
-            promotionResponse.setProductSell_id(promotionIds);
-            responses.add(promotionResponse);
-        }
-        return responses;
+
+    // Helper method to format the date
+    private String formatDate(LocalDateTime date) {
+        DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+        DateTimeFormatter timeFormatter = DateTimeFormatter.ofPattern("HH");
+        String formattedDate = date.toLocalDate().format(dateFormatter);
+        String formattedTime = date.toLocalTime().format(timeFormatter);
+        String dayOfWeek = date.getDayOfWeek().getDisplayName(TextStyle.FULL, Locale.ENGLISH);
+
+        return formattedDate + " " + formattedTime + " (" + dayOfWeek + ")";
     }
-    //Create promotions
+
+    // Helper method to convert a Promotion entity to a PromotionResponse DTO
+    private PromotionResponse toPromotionResponse(Promotion promotion) {
+        PromotionResponse promotionResponse = new PromotionResponse();
+        promotionResponse.setPromotionID(promotion.getPK_promotionID());
+        promotionResponse.setCode(promotion.getCode());
+        promotionResponse.setDescription(promotion.getDescription());
+        promotionResponse.setStartDate(formatDate(promotion.getStartDate()));
+        promotionResponse.setEndDate(formatDate(promotion.getEndDate()));
+        promotionResponse.setStatus(promotion.isStatus());
+        // Assuming you have a method in your repository to get productSellIds by promotionId
+        List<Long> listPromotion = promotionRepository.findProductSellIdsByPromotionId(promotion.getPK_promotionID());
+        List<String> promotionIds = new ArrayList<>();
+        for (Long promotionId : listPromotion) {
+            promotionIds.add(String.valueOf(promotionId));
+        }
+        promotionResponse.setProductSell_id(promotionIds);
+        return promotionResponse;
+    }
+
+    public List<PromotionResponse> ReadAllPromotionWithProductID(){
+        List<Promotion> promotionList = promotionRepository.findAllPromotion();
+        return promotionList.stream()
+                .map(this::toPromotionResponse)
+                .collect(Collectors.toList());
+    }
+
     public Promotion createPromotion(CreatePromotionRequest createPromotionRequest) {
         Promotion promotion = new Promotion();
 
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH");
+        LocalDateTime startDate = LocalDateTime.parse(createPromotionRequest.getStartDate(), formatter);
+        LocalDateTime endDate = LocalDateTime.parse(createPromotionRequest.getEndDate(), formatter);
+
         promotion.setCode(createPromotionRequest.getCode());
         promotion.setDescription(createPromotionRequest.getDescription());
-        promotion.setStartDate(createPromotionRequest.getStartDate());
-        promotion.setEndDate(createPromotionRequest.getEndDate());
+        promotion.setStartDate(startDate);
+        promotion.setEndDate(endDate);
         if(createPromotionRequest.getDiscount()>=0 && createPromotionRequest.getDiscount()<=100) {
             promotion.setDiscount(createPromotionRequest.getDiscount());
             promotionRepository.save(promotion);
@@ -55,79 +77,78 @@ public class PromotionService {
         }
         validateDateOrder(promotion.getStartDate(), promotion.getEndDate());
 
-        // Check if the end date is before the current date
-        Date currentDate = new Date();
-        if (promotion.getEndDate().before(currentDate)) {
-            promotion.setStatus(false);
-        } else {
-            promotion.setStatus(true);
-        }
+        LocalDateTime currentDate = LocalDateTime.now();
+        promotion.setStatus(!promotion.getEndDate().isBefore(currentDate));
 
         return promotionRepository.save(promotion);
     }
 
-    //Reads promotions
-    public Promotion getPromotionById(long PK_promotionID) {
-        return promotionRepository.findById(PK_promotionID).orElse(null);
+    public PromotionResponse getPromotionById(long PK_promotionID) {
+        Promotion promotion = promotionRepository.findById(PK_promotionID).orElse(null);
+        return promotion != null ? toPromotionResponse(promotion) : null;
     }
 
-    public List<Promotion> getPromotionByCode(String code) {
-        return promotionRepository.findByCode(code);
+    public List<PromotionResponse> getPromotionByCode(String code) {
+        List<Promotion> promotions = promotionRepository.findByCode(code);
+        return promotions.stream()
+                .map(this::toPromotionResponse)
+                .collect(Collectors.toList());
     }
 
-    public List<Promotion> readAllPromotion() {
+    public List<PromotionResponse> readAllPromotion() {
         List<Promotion> allPromotions = promotionRepository.findAll();
-        updatePromotionStatusBasedOnEndDate(allPromotions);
-        return allPromotions;
-    }
-
-    public List<Promotion> readAllActivePromotion() {
-        List<Promotion> activePromotions = promotionRepository.findByStatus(true);
-        updatePromotionStatusBasedOnEndDate(activePromotions);
-        return activePromotions;
-    }
-
-    // Retrieve promotions that are active on a given date
-    public List<Promotion> getPromotionsByDate(Date targetDate) {
-        List<Promotion> allPromotions = promotionRepository.findAll();
-        updatePromotionStatusBasedOnEndDate(allPromotions);
-
-        // Filter promotions based on the target date
         return allPromotions.stream()
-                .filter(promotion -> promotion.getStartDate().before(targetDate)
-                        && promotion.getEndDate().after(targetDate))
-                .toList();
+                .map(this::toPromotionResponse)
+                .collect(Collectors.toList());
     }
 
-    //this method is to avoid reading promotions period that has already ended
+    public List<PromotionResponse> readAllActivePromotion() {
+        List<Promotion> activePromotions = promotionRepository.findByStatus(true);
+        return activePromotions.stream()
+                .map(this::toPromotionResponse)
+                .collect(Collectors.toList());
+    }
+
+    public List<PromotionResponse> getPromotionsByDate(LocalDateTime targetDate) {
+        List<Promotion> allPromotions = promotionRepository.findAll();
+        updatePromotionStatusBasedOnEndDate(allPromotions);
+
+        return allPromotions.stream()
+                .filter(promotion -> promotion.getStartDate().isBefore(targetDate)
+                        && promotion.getEndDate().isAfter(targetDate))
+                .map(this::toPromotionResponse)
+                .collect(Collectors.toList());
+    }
+
     private void updatePromotionStatusBasedOnEndDate(List<Promotion> promotions) {
-        Date currentDate = new Date();
+        LocalDateTime currentTime = LocalDateTime.now();
 
         for (Promotion promotion : promotions) {
-            if (promotion.getEndDate().before(currentDate)) {
-                // End date has passed, set status to false
+            if (promotion.getEndDate().isBefore(currentTime)) {
                 promotion.setStatus(false);
                 promotionRepository.save(promotion);
             }
         }
     }
 
-
-    //Update Promotions
     public void updatePromotionDetails(PromotionRequest promotionRequest) {
         Optional<Promotion> promotionUpdate = promotionRepository.findById(promotionRequest.getPK_promotionID());
         if (promotionUpdate.isPresent()) {
             Promotion promotion = promotionUpdate.get();
 
-            validateEndDate(promotion, promotionRequest.getEndDate());
-            validateStartDate(promotion, promotionRequest.getStartDate());
-            validateDateOrder(promotionRequest.getStartDate(), promotionRequest.getEndDate());
-            validateDateDifference(promotionRequest.getStartDate(), promotionRequest.getEndDate());
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH");
+            LocalDateTime startDate = LocalDateTime.parse(promotionRequest.getStartDate(), formatter);
+            LocalDateTime endDate = LocalDateTime.parse(promotionRequest.getEndDate(), formatter);
+
+            validateEndDate(promotion, endDate);
+            validateStartDate(promotion, startDate);
+            validateDateOrder(startDate, endDate);
+            validateDateDifference(startDate, endDate);
 
             promotion.setCode(promotionRequest.getCode());
             promotion.setDescription(promotionRequest.getDescription());
-            promotion.setStartDate(promotionRequest.getStartDate());
-            promotion.setEndDate(promotionRequest.getEndDate());
+            promotion.setStartDate(startDate);
+            promotion.setEndDate(endDate);
             if(promotionRequest.getDiscount()>=0 && promotionRequest.getDiscount()<=100) {
                 promotion.setDiscount(promotionRequest.getDiscount());
                 promotionRepository.save(promotion);
@@ -137,41 +158,49 @@ public class PromotionService {
         }
     }
 
-    private void validateEndDate(Promotion promotion, Date newEndDate) {
-        if (promotion.getEndDate().compareTo(newEndDate) > 0) {
-            throw new IllegalArgumentException("End date cannot be earlier " +
-                    "than the current end date");
+    private void validateEndDate(Promotion promotion, LocalDateTime newEndDate) {
+        if (promotion.getEndDate().isAfter(newEndDate)) {
+            throw new IllegalArgumentException("End date cannot be earlier than the current end date");
         }
     }
-    private void validateStartDate(Promotion promotion, Date newStartDate) {
-        Date currentTime = new Date(); // Get the current time
 
-        if (newStartDate.before(currentTime)) {
-            throw new IllegalArgumentException("Start date cannot be earlier " +
-                    "than the current time");
+    private void validateStartDate(Promotion promotion, LocalDateTime newStartDate) {
+        LocalDateTime currentTime = LocalDateTime.now();
+
+        if (newStartDate.isBefore(currentTime)) {
+            throw new IllegalArgumentException("Start date cannot be earlier than the current time");
         }
     }
-    private void validateDateOrder(Date startDate, Date endDate) {
-        if (endDate.compareTo(startDate) < 0) {
-            throw new IllegalArgumentException("End date cannot be before" +
-                    " the start date");
+
+    private void validateDateOrder(LocalDateTime startDate, LocalDateTime endDate) {
+        if (endDate.isBefore(startDate)) {
+            throw new IllegalArgumentException("End date cannot be before the start date");
         }
     }
-    private void validateDateDifference(Date startDate, Date endDate) {
-        long diffInMillies = Math.abs(endDate.getTime() - startDate.getTime());
-        long diffInDays = TimeUnit.DAYS.convert(diffInMillies, TimeUnit.MILLISECONDS);
+
+//    private void validateDateDifference(LocalDateTime startDate, LocalDateTime endDate) {
+//        long diffInMilliseconds = Math.abs(endDate.getDayOfYear() - startDate.getDayOfYear());
+//        long diffInDays = TimeUnit.DAYS.convert(diffInMilliseconds, TimeUnit.MILLISECONDS);
+//        if (diffInDays < 3) {
+//            throw new IllegalArgumentException("End date should be apart from the start date for at least 3 days");
+//        }
+//    }//This method is incorrectly performed
+
+    private void validateDateDifference(LocalDateTime startDate, LocalDateTime endDate) {
+        long diffInDays = ChronoUnit.DAYS.between(startDate, endDate);
         if (diffInDays < 3) {
-            throw new IllegalArgumentException("End date should be apart from " +
-                    "the start date for at least 3 days");
+            throw new IllegalArgumentException("End date should be apart from the start date for at least 3 days");
         }
     }
 
-    //Delete Promotion
+
     public void deletePromotionById(long id) {
         Optional<Promotion> promotionUpdate = promotionRepository.findById(id);
         promotionUpdate.ifPresent(promotion -> {
-            promotion.setStatus(false); // Set status to false
+            promotion.setStatus(false);
             promotionRepository.save(promotion);
         });
     }
 }
+
+
